@@ -10,12 +10,16 @@ import com.i3.delivery.domain.store.repository.custom.impl.StoreRepositoryImpl;
 import com.i3.delivery.domain.user.entity.User;
 import com.i3.delivery.domain.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -50,9 +54,12 @@ public class StoreService {
         return StoreRegistrationResponseDto.fromEntity(store);
     }
 
-    public List<StoreInfoResponseDto> getStores() {
+    public Page<StoreInfoResponseDto> getStores(Pageable pageable, int size) {
 
-        return storeRepository.findAll().stream().map(store -> new StoreInfoResponseDto()).toList();
+        pageable = PageRequest.of(pageable.getPageNumber(), size, pageable.getSort());
+
+        return storeRepository.findAll(pageable).
+                map(StoreInfoResponseDto::fromEntity);
     }
 
     public StoreInfoResponseDto getStore(Long id) {
@@ -62,9 +69,13 @@ public class StoreService {
         return StoreInfoResponseDto.fromEntity(store);
     }
 
-    public List<StoreInfoResponseDto> getStoresByKeyword(String keyword) {
+    @Transactional
+    public List<StoreInfoResponseDto> getStoresByKeyword(String keyword,Pageable pageable, int size) {
 
-        return storeRepositoryImpl.findAll(keyword).stream().map(store -> new StoreInfoResponseDto()).toList();
+        pageable = PageRequest.of(pageable.getPageNumber(), size, pageable.getSort());
+
+        return storeRepositoryImpl.findAll(keyword, pageable)
+                .stream().map(StoreInfoResponseDto::fromEntity).collect(Collectors.toList());
     }
 
     @Transactional
